--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "apexcharts": "^3.36.3",
+    "@reclaimprotocol/reclaim-sdk": "^1.0.7",
     "axios": "^1.2.2",
     "core-js": "^3.6.5",
+    "firebase": "^8.3.2",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.2",
     "vue-chartist": "^2.2.1",
