--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.2",
     "vue-chartist": "^2.2.1",
+    "vue-qrcode": "^2.2.0",
+    "vue-qrcode-component": "^2.1.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.0",
     "vuex": "^3.4.0"
